--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,22 @@ file(GLOB_RECURSE src_files RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/*.cpp" "
 add_executable(Typo
     ${src_files}
 )
-
+target_compile_options(Typo PRIVATE )
 include_directories(
     src/
     # C:/MinGW/lib
-    C:/MinGW/include
+    C:/msys64/usr/include
+    C:/msys64/mingw64/include
 )
 link_directories(
-    C:/MinGW/lib
+    C:/msys64/usr/lib
+    C:/msys64/mingw64/lib
 )
 
-target_link_libraries(Typo PUBLIC libpdcurses)
+target_link_libraries(Typo PUBLIC 
+    -lncurses
+    # libstdc++
+    # libstdc++fs
+       
+)
 
